Use toList() Stream method